--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/05/03</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (5 men)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned, found near Ba Kacem beach in Tangier (MA)</b><br>Source: MUGAK<br>
+Found dead: <b>02/01/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>reportedly drowned trying to reach Tarifa (ES)</b><br>Source: EP<br>
 
 <br>
 
