--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/03/11</b><br>Number of person: <b>308</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing, feared drowned when boat carrying 335 people from Libya to Italy was not seen after 2 weeks</b><br>Source: Quotidiano/LR/Migreurop/Kaosenlared/RAI<br>
+Found dead: <b>18/06/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>stowaway, jumped off container ship in the Channel Tunnel and drowned</b><br>Source: BBC/MNS/Ya.N/IRR<br>
 
 <br>
 
