--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/09/12</b><br>Number of person: <b>30</b><br>Name, gender, age: <b>N.N. (18 women; 12 men)</b><br>Region of origin: <b>Palestine, Syria, Iraq</b><br>Cause of death: <b>drowned after overcrowded boat from Ahmetbeyli (TR) sank in the Aegean Sea; 46 survivors</b><br>Source: Reu./AFP/Le Monde/Migreurop/SP/MNS/Aljazeera<br>
+Found dead: <b>25/10/03</b><br>Number of person: <b>37</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned during shipwreck in bay of Cádiz (ES), bodies washed ashore</b><br>Source: ST/MNS/Indymedia/VK/AP/GuardianUn./Trouw<br>
 
 <br>
 
