--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/02/11</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (4 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died on boat travelling to Italy, found by coast guards near Sfax (TN)</b><br>Source: LR<br>
+Found dead: <b>17/01/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shehzad Luqman (man, 27)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>stabbed by 2 Golden Dawn members on motorbike in Athens (GR)</b><br>Source: Reu./MNS/KTG/CS<br>
 
 <br>
 
