--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/06/12</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stowaways, died of asphyxiation and heat inside truck on ferry from Greece to Ancona (IT)</b><br>Source: PICUM/Infomob/FE/LR<br>
+Found dead: <b>25/10/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>suicide, in Diedersdorf (DE) out of fear of deportation</b><br>Source: Diakonie Seelow/Büro für Asylfragen/ZAG<br>
 
 <br>
 
