--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/10/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Prince Kwabena Fosu (man, 31)</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>died of unknown causes in Harmondsworth removal centre (GB)</b><br>Source: IRR/SchNews<br>
+Found dead: <b>17/10/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammad O. Eyman (man, 26)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>harassed and beaten to death by smugglers in camp near Norrent-Fortes in Calais (FR)</b><br>Source: Passeurs d’hospitalités<br>
 
 <br>
 
