--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 02</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after small boat capsized near Tunisia on way to Sicily (IT)</b><br>Source: AP/Tagesspiegel<br>
+Found dead: <b>23/08/14</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>died, probably from dehydration and starvation, on dinghy in the Mediterranean Sea; 73 survived</b><br>Source: DW/UNHCR<br>
 
 <br>
 
