--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/08/14</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>died, probably from dehydration and starvation, on dinghy in the Mediterranean Sea; 73 survived</b><br>Source: DW/UNHCR<br>
+Found dead: <b>Dec 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 17)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned in an accident at refugee centre in Vestby (NO)</b><br>Source: Klassekampen<br>
 
 <br>
 
