--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/05/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body found by Italian coast guard near Ragusa, Sicily (IT)</b><br>Source: NOB/AdnK<br>
+Found dead: <b>12/1/2000</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hossein (30)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>suicide, asylum seeker in Stockholm (SE)</b><br>Source: Nätverket mot rasism<br>
 
 <br>
 
