--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/10/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ahmed Hassan (boy, 15)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>murdered in racist assault at school in Trollhattan (SE); another student from Syria injured</b><br>Source: Mail Online<br>
+Found dead: <b>14/09/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>pushed off jet ski by smuggler off coast of Andalusia (ES) as coastguard approached</b><br>Source: SUR/MUGAK<br>
 
 <br>
 
