--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/07/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child, ±4)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found in advanced state of decomposition in the Algarrobo River in Málaga (ES)</b><br>Source: EP/NOB<br>
+Found dead: <b>Feb 17</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (teenagers)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>suicides, between January and February 2017 in various asylum centres in Sweden</b><br>Source: DFunk/EpochTimesDE<br>
 
 <br>
 
