--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/01/01</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (4 women; 8 men)</b><br>Region of origin: <b>Ecuador</b><br>Cause of death: <b>died in van accident near Murcia (ES), undocumented migrant workers</b><br>Source: MNS<br>
+Found dead: <b>15/08/10</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>died of dehydration in desert near Tamanrasset (DZ), with 12 others trying to reach Europe</b><br>Source: AFP/FocusNews/AllWAfrica<br>
 
 <br>
 
