--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/07/06</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation, bodies thrown overboard from boat that reached Gran Canaria (ES); 48 survivors</b><br>Source: APDHA<br>
+Found dead: <b>04/12/00</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>reportedly drowned in shipwreck near Anjouan (KM) while trying to reach Mayotte (FR)</b><br>Source: Mayotte sans frontires<br>
 
 <br>
 
