--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jan 00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died after jumping down cliff while trying to cross border into the Spanish enclave of Melilla (ES)</b><br>Source: MUGAK<br>
+Found dead: <b>06/02/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Armand Debordo Bakayo (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>shot to death in Fnideq (MA) by Spanish/Moroccan police while trying to reach the Spanish enclave of Ceuta (ES)</b><br>Source: BB/FFM/Reu./Telegraph/VK/SP/ECRE<br>
 
 <br>
 
