--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/02/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Armand Debordo Bakayo (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>shot to death in Fnideq (MA) by Spanish/Moroccan police while trying to reach the Spanish enclave of Ceuta (ES)</b><br>Source: BB/FFM/Reu./Telegraph/VK/SP/ECRE<br>
+Found dead: <b>07/04/08</b><br>Number of person: <b>16</b><br>Name, gender, age: <b>N.N. (±23)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>11 drowned off coast of Arzew (DZ); 5 migrants missing</b><br>Source: KH/FE/NOB<br>
 
 <br>
 
