--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/09/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nadeem Ahmad (26)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>suffocated in van near Mantua (IT) while travelling to Germany, undocumented worker</b><br>Source: IRR/IILM<br>
+Found dead: <b>03/04/09</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 woman; 1 man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>found on boat 60 km off the southern coast of Lampedusa (IT), had reportedly come from Libya</b><br>Source: ANSA/AVV/NOB<br>
 
 <br>
 
