--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/05/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, 49)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>suicide, at Ponte Galeria detention centre near Rome (IT)</b><br>Source: IlMess/IRR<br>
+Found dead: <b>27/05/99</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (2 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after small boat collided with police boat in the Adriatic Sea near Otranto (IT)</b><br>Source: MNS/AFP/LS/NCAs<br>
 
 <br>
 
