--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, seen falling from aircraft near Heathrow Airport (GB)</b><br>Source: MNS/OBV/IRR<br>
+Found dead: <b>11/01/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>drowned after smugglers threw group of 40 migrants into the Adriatic Sea near Puglia (IT)</b><br>Source: Xinhua/RAI/ANSA/LR<br>
 
 <br>
 
