--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/10/12</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned while attempting to reach Spain by boat from Morocco; 50 rescued</b><br>Source: FE<br>
+Found dead: <b>25/07/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 8)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body found off coast of Kos (GR); likely on boat that sank carrying 13 migrants</b><br>Source: Xinhua/GR/TodZam<br>
 
 <br>
 
