--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/10/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hasun Albaadzh (man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>died of medical neglect in Busmantsi detention centre (BG) where he had been held for 3 years</b><br>Source: IRR<br>
+Found dead: <b>03/06/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>M’manga Soule</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>drowned after boat hit a rock between Anjouan (KM) and Mayotte (FR)</b><br>Source: Malango<br>
 
 <br>
 
