--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/05/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (pregnant woman)</b><br>Region of origin: <b>Bolivia</b><br>Cause of death: <b>hit by train at a crossing in Hellín (ES)</b><br>Source: MNS<br>
+Found dead: <b>19/11/14</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, killed during a fire inside truck while trying to enter Great Britain from Belgium</b><br>Source: CMS/Mail Online/EastAFRO/Telegraph<br>
 
 <br>
 
