--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/04/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>More Kebba Dibanneh (26)</b><br>Region of origin: <b>Gambia</b><br>Cause of death: <b>drowned after boat capsized following collision with vessel near Gergarish (LY)</b><br>Source: VK<br>
+Found dead: <b>Mar 11</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in a fire in shack in the Spanish enclave of Melilla (ES) while waiting to travel to mainland Spain</b><br>Source: ABC/MUGAK<br>
 
 <br>
 
