--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/09/15</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned off coast of the Spanish enclave of Ceuta (ES); 1 body recovered, 1 missing</b><br>Source: IOM/SP/Globedia<br>
+Found dead: <b>06/09/12</b><br>Number of person: <b>30</b><br>Name, gender, age: <b>N.N. (18 women; 12 men)</b><br>Region of origin: <b>Palestine, Syria, Iraq</b><br>Cause of death: <b>drowned after overcrowded boat from Ahmetbeyli (TR) sank in the Aegean Sea; 46 survivors</b><br>Source: Reu./AFP/Le Monde/Migreurop/SP/MNS/Aljazeera<br>
 
 <br>
 
