--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Dec 99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lofti (man)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died in fire caused by rebellion in detention centre of Vulpitta in Trapani (IT)</b><br>Source: MP/ARCI/L.B.CPT/GdV/quibla/INDi<br>
+Found dead: <b>13/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ugur Abdulrezzak (man, 39)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>missing after boat sunk in the Evros River on Turkish-Greek border; was fleeing post-coup crackdown in Turkey</b><br>Source: Reu./TDEMD/IOM Turkey/TurkeyPurge/TRMinute<br>
 
 <br>
 
