--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/08/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zhang Chaolin (man, 49)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>attacked by racists in the street in suburb of Aubervilliers, Paris (FR), died after 5 days in coma</b><br>Source: BBC/NYtimes<br>
+Found dead: <b>20/07/98</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned near shore of southern Italy after being spotted by coast guards and forced overboard</b><br>Source: AFP/CDS<br>
 
 <br>
 
