--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/07/98</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned near shore of southern Italy after being spotted by coast guards and forced overboard</b><br>Source: AFP/CDS<br>
+Found dead: <b>16/04/17</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (1 boy, 8; 1 pregnant woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died during rescue operations in the Mediterranean Sea travelling from Libya to Italy; 8,500 rescued</b><br>Source: VK/FocusDE/Reu.<br>
 
 <br>
 
