--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/04/17</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (1 boy, 8; 1 pregnant woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died during rescue operations in the Mediterranean Sea travelling from Libya to Italy; 8,500 rescued</b><br>Source: VK/FocusDE/Reu.<br>
+Found dead: <b>20/03/16</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>heart attack after arriving in Lesbos (GR), threatened with deportation to Turkey</b><br>Source: MEOnline/Watch TheMed/Mail Online<br>
 
 <br>
 
