--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Farideh Karimi (woman, 42)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>died of cancer and medical neglect at asylum centre in Appelscha (NL)</b><br>Source: MAG/VK<br>
+Found dead: <b>17/07/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>body found in boat that had been travelling for 10 days from Mauritania to Tenerife (ES)</b><br>Source: EP/EPress<br>
 
 <br>
 
