--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/10/07</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (7 men)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>drowned after boat travelling from Egypt capsized, found off Roccella Ionica coast, Calabria (IT)</b><br>Source: MNS/PICUM/LESP/jW/LR/MUGAK/AVUI<br>
+Found dead: <b>2001</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Khorany Abdulhabib (man, 25)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned in the Aegean Sea while travelling from Turkey to Lesbos (GR)</b><br>Source: Den Blanken<br>
 
 <br>
 
