--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/10/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 16)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>hit by car in Regensburg (DE) after being abandoned by smugglers</b><br>Source: ZAG<br>
+Found dead: <b>07/03/05</b><br>Number of person: <b>36</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>reportedly drowned in the Mozambique Channel after boat sank trying to reach Mayotte (FR)</b><br>Source: Mayotte sans frontières<br>
 
 <br>
 
