--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/04/07</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa, Senegal</b><br>Cause of death: <b>11 reportedly disappeared at sea on way from Senegal to Canary Islands (ES)</b><br>Source: EXP/EP/jW<br>
+Found dead: <b>31/08/17</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (7 women)</b><br>Region of origin: <b>Congo, Guinea</b><br>Cause of death: <b>died when boat was intercepted by authorities on way to the Spanish enclave of Melilla (ES)</b><br>Source: MEOnline<br>
 
 <br>
 
