--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/12/05</b><br>Number of person: <b>22</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>reportedly drowned in the Strait of Gibraltar while travelling by boat to Spain</b><br>Source: Exodus<br>
+Found dead: <b>11/12/06</b><br>Number of person: <b>51</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Egypt, Syria, Palestine</b><br>Cause of death: <b>drowned after boat capsized near Seferihisar (TR) while trying to reach Greek coast</b><br>Source: TDN/TP/Ya.D<br>
 
 <br>
 
