--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/12/06</b><br>Number of person: <b>51</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Egypt, Syria, Palestine</b><br>Cause of death: <b>drowned after boat capsized near Seferihisar (TR) while trying to reach Greek coast</b><br>Source: TDN/TP/Ya.D<br>
+Found dead: <b>01/01/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned in the Strait of Otranto while trying to reach Italy</b><br>Source: ILM<br>
 
 <br>
 
